# kante-kusta

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs  scraper.rs
src/commands/: browse.rs  categories.rs  deals.rs  history.rs  mod.rs  popular.rs  related.rs  search.rs
src/format/: mod.rs
tests/: api_integration.rs
